[gd_scene load_steps=9 format=3 uid="uid://qb2vt7mceypb"]

[ext_resource type="Script" path="res://levels/kill_floor_level.gd" id="1_6yfes"]
[ext_resource type="PackedScene" uid="uid://benshrhyqaw07" path="res://player/player.tscn" id="1_n04oq"]
[ext_resource type="Material" uid="uid://cqlktr7j3dv74" path="res://Textures/Prototype.tres" id="2_m3o0g"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_k4dqm"]
sky_top_color = Color(0.205968, 0.252119, 0.316302, 1)
sky_horizon_color = Color(0, 0, 0, 1)
sky_curve = 0.197926
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_l10jl"]
sky_material = SubResource("ProceduralSkyMaterial_k4dqm")

[sub_resource type="Environment" id="Environment_b1nwp"]
background_mode = 2
sky = SubResource("Sky_l10jl")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_mkxtm"]
size = Vector3(3, 1, 2.49609)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_dr4sb"]

[node name="KillFloorLevel" type="Node3D"]
script = ExtResource("1_6yfes")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b1nwp")

[node name="Player" parent="." instance=ExtResource("1_n04oq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -34.941)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9.69412, -33.894)
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
material_override = ExtResource("2_m3o0g")
use_collision = true

[node name="boundry" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -18, 0)
size = Vector3(75, 66, 75)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D/boundry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.106995, 0)
operation = 2
size = Vector3(73, 64.786, 73)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -34.5)
size = Vector3(5, 1, 4)

[node name="jump1" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25)
size = Vector3(3, 1, 3)

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump1/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="jump2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14)
size = Vector3(3, 1, 3)

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
visible = false
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="jump3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -7)
size = Vector3(3, 1, 3)

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
visible = false
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump3/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="jump4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.8002, 0, -6.5)
size = Vector3(2, 1, 2)

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
visible = false
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump4/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 34.5)
size = Vector3(5, 1, 4)

[node name="jump5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8002, 3, -1.5)
size = Vector3(2, 1, 2)

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump5"]
transform = Transform3D(1, 0, 0, 0, -0.173648, 0.984808, 0, -0.984808, -0.173648, 0, 9, -2)
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump5/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="jump6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8002, 6, 3.63255)
size = Vector3(2, 1, 2)

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump6"]
transform = Transform3D(1, 0, 0, 0, -0.258819, 0.965926, 0, -0.965926, -0.258819, 0, 9, -2)
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump6/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="jump7" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.800169, 6, 3.63255)
size = Vector3(2, 1, 2)

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump7"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump7/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="jump8" type="CSGTorus3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.800169, 3, 15.6326)
inner_radius = 1.0
outer_radius = 2.0

[node name="SpotLight3D2" type="SpotLight3D" parent="CSGCombiner3D/jump8"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="CSGCombiner3D/jump8"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCombiner3D/jump8/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.251953)
shape = SubResource("BoxShape3D_mkxtm")

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9.69412, 35.106)
light_energy = 10.535
light_volumetric_fog_energy = 6.591
light_size = 0.375
spot_range = 12.1248
spot_angle = 21.291

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -33, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("WorldBoundaryShape3D_dr4sb")

[connection signal="body_entered" from="CSGCombiner3D/jump1/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="CSGCombiner3D/jump2/Area3D" to="." method="_on_jump2_area_3d_body_entered"]
[connection signal="body_entered" from="CSGCombiner3D/jump3/Area3D" to="." method="_on_jump3_area_3d_body_entered"]
[connection signal="body_entered" from="CSGCombiner3D/jump4/Area3D" to="." method="_on_jump3_area_3d_body_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_killzone_entered"]
